--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit_button"></button>
+            <button class="profile__edit-button"></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button class="profile__add-button"></button>
         </section>
         <section class="cards page__section">
-          <ul class="card__list">
+          <ul class="cards__list">
             <li class="card">
               <img
                 src="./images/yosemite-valley.jpg"
