modal open/close javascript

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button" type="button"></button>
+            <button
+              class="profile__edit-button"
+              id="profile-edit-button"
+              type="button"
+            ></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button class="profile__add-button" type="button"></button>
@@ -105,13 +109,18 @@
         <p class="footer__info">© 2022 Around The U.S.</p>
       </footer>
     </div>
-    <div class="modal">
+    <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button class="modal__close"></button>
+        <button class="modal__close" id="modal-close-button"></button>
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
-          <input class="field1" type="text" name="title" />
-          <input class="field2" type="text" name="description" />
+          <input class="field1" type="text" name="title" placeholder="Name" />
+          <input
+            class="field2"
+            type="text"
+            name="description"
+            placeholder="Description"
+          />
           <button class="modal__button">Save</button>
         </form>
       </div>
