--- a/index.html
+++ b/index.html
@@ -112,12 +112,19 @@
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
         <button class="modal__close" id="modal-close-button"></button>
-        <p class="modal__heading">Edit Profile</p>
+        <h3 class="modal__heading">Edit Profile</h3>
         <form class="modal__form">
-          <input class="field1" type="text" name="title" placeholder="Name" />
+          <input
+            class="field1"
+            type="text"
+            id="profile-title-input"
+            name="title"
+            placeholder="Name"
+          />
           <input
             class="field2"
             type="text"
+            id="profile-des"
             name="description"
             placeholder="Description"
           />
@@ -125,6 +132,16 @@
         </form>
       </div>
     </div>
+
+    <template id="card-template">
+      <li class="card">
+        <img src="" alt="" class="card__image" />
+        <div class="card__description">
+          <h2 class="card__title"></h2>
+          <button class="card__like-button" type="button"></button>
+        </div>
+      </li>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
