--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <input
             class="field2"
             type="text"
-            id="profile-des"
+            id="profile-description-input"
             name="description"
             placeholder="Description"
           />
