renamed form fields

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <h3 class="modal__heading">Edit Profile</h3>
         <form class="modal__form">
           <input
-            class="field1"
+            class="nameField"
             type="text"
             id="profile-title-input"
             name="title"
             placeholder="Name"
           />
           <input
-            class="field2"
+            class="descriptionField"
             type="text"
             id="profile-description-input"
             name="description"
