--- a/index.html
+++ b/index.html
@@ -44,24 +44,30 @@
     </div>
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button class="modal__close" id="modal-close-button"></button>
+        <button
+          class="modal__close"
+          type="button"
+          id="modal-close-button"
+        ></button>
         <h3 class="modal__heading">Edit Profile</h3>
         <form class="modal__form">
           <input
-            class="nameField"
+            class="modal__form_name-field"
             type="text"
             id="profile-title-input"
             name="title"
             placeholder="Name"
+            required
           />
           <input
-            class="descriptionField"
+            class="modal__form_description-field"
             type="text"
             id="profile-description-input"
             name="description"
             placeholder="Description"
+            required
           />
-          <button class="modal__button">Save</button>
+          <button class="modal__button" type="submit">Save</button>
         </form>
       </div>
     </div>
@@ -75,6 +81,6 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
