modal responsive design

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h3 class="modal__heading">Edit Profile</h3>
         <form class="modal__form">
           <input
-            class="modal__form_name-field"
+            class="modal__input"
             type="text"
             id="profile-title-input"
             name="title"
@@ -60,14 +60,14 @@
             required
           />
           <input
-            class="modal__form_description-field"
+            class="modal__input"
             type="text"
             id="profile-description-input"
             name="description"
             placeholder="Description"
             required
           />
-          <button class="modal__button" type="submit">Save</button>
+          <button class="modal__save-button" type="submit">Save</button>
         </form>
       </div>
     </div>
