--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             class="profile__image"
           />
           <div class="profile__info">
-            <h1 class="profile__title">Jacques Cousteau</h1>
+            <h1 class="profile__name">Jacques Cousteau</h1>
             <button
               class="profile__edit-button"
               id="profile-edit-button"
@@ -52,15 +52,14 @@
         <h3 class="modal__heading">Edit Profile</h3>
         <form class="modal__form">
           <input
-            class="modal__input"
+            class="modal__input modal__input_type_name"
             type="text"
-            id="profile-title-input"
             name="title"
             placeholder="Name"
             required
           />
           <input
-            class="modal__input"
+            class="modal__input modal__input_type_description"
             type="text"
             id="profile-description-input"
             name="description"
