added image preview

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
       </div>
     </div>
     <!--Add preview image modal-->
-    <div class="modal" id="preview-image-modal"></div>
+    <div class="modal" id="preview-image-modal">
+      <img src="" alt="" class="modal__preview-image" />
+    </div>
 
     <template id="card-template">
       <li class="card">
