transition modal windows

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
     </div>
     <!--Add preview image modal-->
     <div class="modal" id="preview-image-modal">
+      <button
+        class="modal__close"
+        type="button"
+        id="modal-close-button"
+      ></button>
       <img src="" alt="" class="modal__preview-image" />
     </div>
 
