--- a/index.html
+++ b/index.html
@@ -102,12 +102,15 @@
     </div>
     <!--Add preview image modal-->
     <div class="modal" id="preview-image-modal">
-      <button
-        class="modal__close"
-        type="button"
-        id="modal-close-button"
-      ></button>
-      <img src="" alt="" class="modal__preview-image" />
+      <div class="modal__container modal__container_preview-image">
+        <button
+          class="modal__close"
+          type="button"
+          id="modal-close-button"
+        ></button>
+        <img src="" alt="" class="modal__preview-image" />
+        <p>label</p>
+      </div>
     </div>
 
     <template id="card-template">
