--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
     <div class="modal" id="preview-image-modal">
       <div class="modal__container modal__container_preview-image">
         <button
-          class="modal__close"
+          class="modal__close modal__close_preview-image"
           type="button"
           id="modal-close-button"
         ></button>
         <img src="" alt="" class="modal__preview-image" />
-        <p>label</p>
+        <p class="modal__image-label">The Grand Canyon</p>
       </div>
     </div>
 
