--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
           type="button"
           id="modal-close-button"
         ></button>
-        <img src="" alt="" class="modal__preview-image" />
+        <img
+          src="../images/yosemite-valley.jpg"
+          alt="image preview"
+          class="modal__preview-image"
+        />
         <p class="modal__image-label">The Grand Canyon</p>
       </div>
     </div>
