renamed modal close ids

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <button
           class="modal__close"
           type="button"
-          id="modal-close-button"
+          id="edit-modal-close-button"
         ></button>
         <h3 class="modal__heading">Edit Profile</h3>
         <form class="modal__form">
@@ -76,7 +76,7 @@
         <button
           class="modal__close"
           type="button"
-          id="modal-close-button"
+          id="add-card-modal-close-button"
         ></button>
         <h3 class="modal__heading">New Place</h3>
         <form class="modal__form" id="add-card-form">
@@ -106,7 +106,7 @@
         <button
           class="modal__close modal__close_preview-image"
           type="button"
-          id="modal-close-button"
+          id="preview-modal-close-button"
         ></button>
         <img
           src="../images/yosemite-valley.jpg"
