--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <main class="content">
         <section class="profile page__section">
           <img
-            src="images/AndyWickGreen.JPG"
+            src="images/jacques-cousteau.jpg"
             alt="avatar"
             class="profile__image"
           />
           <div class="profile__info">
-            <h1 class="profile__name">Joseph Wickoren</h1>
+            <h1 class="profile__name">Jacques Cousteau</h1>
             <button
               class="profile__edit-button"
               id="profile-edit-button"
@@ -82,7 +82,7 @@
         <form class="modal__form" id="add-card-form">
           <input
             class="modal__input modal__input_type_title"
-            type="text"
+            type="url"
             id="profile-title-input"
             name="title"
             placeholder="Title"
