changed alt to template literal, updated button file paths

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <form class="modal__form" id="add-card-form">
           <input
             class="modal__input modal__input_type_title"
-            type="url"
+            type="txt"
             id="profile-title-input"
             name="title"
             placeholder="Title"
@@ -90,7 +90,7 @@
           />
           <input
             class="modal__input modal__input_type_url"
-            type="text"
+            type="url"
             id="profile-description-input"
             name="url"
             placeholder="Image URL"
@@ -109,7 +109,7 @@
           id="preview-modal-close-button"
         ></button>
         <img
-          src="../images/yosemite-valley.jpg"
+          src="./images/yosemite-valley.jpg"
           alt="image preview"
           class="modal__preview-image"
         />
