--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <form class="modal__form" id="add-card-form">
           <input
             class="modal__input modal__input_type_title"
-            type="txt"
+            type="text"
             id="profile-title-input"
             name="title"
             placeholder="Title"
