--- a/index.html
+++ b/index.html
@@ -68,12 +68,15 @@
           <label class="modal__label">
             <input
               class="modal__input modal__input_type_description"
+              id="owner-description"
               type="text"
               name="description"
               placeholder="Description"
+              minlength="2"
+              maxlength="200"
               required
             />
-            <span class="modal__error modal__input_type_error"></span>
+            <span class="modal__error" id="owner-description-error"></span>
           </label>
           <button class="modal__save-button" type="submit">Save</button>
         </form>
@@ -89,23 +92,37 @@
         ></button>
         <h3 class="modal__heading">New Place</h3>
         <form class="modal__form" id="add-card-form">
-          <input
-            class="modal__input modal__input_type_title"
-            type="text"
-            id="profile-title-input"
-            name="title"
-            placeholder="Title"
-            required
-          />
-          <input
-            class="modal__input modal__input_type_url"
-            type="url"
-            id="profile-description-input"
-            name="url"
-            placeholder="Image URL"
-            required
-          />
-          <button class="modal__save-button" type="submit">Save</button>
+          <label class="modal__label">
+            <input
+              class="modal__input modal__input_type_title"
+              type="text"
+              id="card-title"
+              name="title"
+              placeholder="Title"
+              minlength="1"
+              maxlength="30"
+              required
+            />
+            <span class="modal__error" id="card-title-error"></span>
+          </label>
+          <label class="modal__label">
+            <input
+              class="modal__input modal__input_type_url"
+              type="url"
+              id="card-image-url"
+              name="url"
+              placeholder="Image URL"
+              required
+            />
+            <span class=".modal__error" id="card-image-url-error"></span>
+          </label>
+          <button
+            class="modal__save-button modal__save-button_disabled"
+            type="submit"
+            disabled
+          >
+            Save
+          </button>
         </form>
       </div>
     </div>
