--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <!--Edit profile modal-->
     <div class="modal" id="profile-edit-modal">
-      <div class="modal__container">
+      <div class="modal__container" id="profile-edit-modal-container">
         <button
           class="modal__close"
           type="button"
