--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               placeholder="Image URL"
               required
             />
-            <span class=".modal__error" id="card-image-url-error"></span>
+            <span class="modal__error" id="card-image-url-error"></span>
           </label>
           <button
             class="modal__save-button modal__save-button_disabled"
@@ -153,6 +153,7 @@
         </div>
       </li>
     </template>
+    <script src="./scripts/initialcards.js" defer></script>
     <script src="./scripts/index.js" defer></script>
     <script src="./scripts/validation.js" defer></script>
   </body>
