--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/initialcards.js" defer></script>
-    <script src="./scripts/index.js" defer></script>
+    <script src="./scripts/initialcards.js" type="module" defer></script>
+    <script src="./pages/index.js" type="module" defer></script>
     <script src="./scripts/validation.js" defer></script>
   </body>
 </html>
