both modals showing validation messages

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
           id="add-card-modal-close-button"
         ></button>
         <h3 class="modal__heading">New Place</h3>
+        <!--the other form has the novalidate attribute-->
         <form class="modal__form" id="add-card-form">
           <label class="modal__label">
             <input
