fully functional OOP modified project

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               placeholder="Image URL"
               required
             />
-            <span class=".modal__error" id="card-image-url-error"></span>
+            <span class="modal__error" id="card-image-url-error"></span>
           </label>
           <button
             class="modal__save-button modal__save-button_disabled"
